--- a/assets/styles/responsiveness.less
+++ b/assets/styles/responsiveness.less
@@ -7,6 +7,10 @@
 /* Extra small  and small devices (phones, 767px and down) */
 @media (max-width: 767px)
 {
+	.parallax {
+		background-attachment: scroll;
+	}
+
 	#embeded-map
 	{
 		height: 300px;
